crates/check_js_type_info/tests/snapshots/infer_resolved_type_from_double_chained_invocation_of_promise_returning_function.snap
---
source: crates/check_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
function returnsPromise(): Promise<number> {
	return Promise.resolved(true);
}

returnsPromise()
	.then(() => {})
	.finally(() => {});

```

## Result

```
Call Module(0) TypeId(6)(Module(0) TypeId(4))
```

## Registered types

```
Thin TypeId(0) => sync Function "returnsPromise" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Global TypeId(0)
}

Thin TypeId(1) => Call Module(0) TypeId(0)(No parameters)

Thin TypeId(2) => Module(0) TypeId(1).then

Thin TypeId(3) => void

Thin TypeId(4) => sync Function {
  accepts: {
    params: []
    type_args: []
  }
  returns: Module(0) TypeId(3)
}

Thin TypeId(5) => Call Module(0) TypeId(2)(Module(0) TypeId(4))

Thin TypeId(6) => Module(0) TypeId(5).finally

Global TypeId(0) => instanceof Global TypeId(1)

Global TypeId(1) => instanceof Promise<number>
```
