crates/check_js_type_info/tests/snapshots/infer_resolved_type_of_destructured_array_element.snap
---
source: crates/check_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
const [a]: Array<string> = [];

```

## Result

```
a => Global TypeId(0)[0]

```

## Registered types

```
Global TypeId(0) => instanceof Global TypeId(2)

Global TypeId(1) => Global TypeId(0)[0]

Global TypeId(2) => instanceof Array<string>
```
