crates/check_js_type_info/tests/snapshots/infer_resolved_type_of_promise_returning_function.snap
---
source: crates/check_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
function returnsPromise(): Promise<number> {
	return Promise.resolved(true);
}

```

## Result

```
sync Function "returnsPromise" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Global TypeId(0)
}
```

## Registered types

```
Global TypeId(0) => instanceof Global TypeId(1)

Global TypeId(1) => instanceof Promise<number>
```
