crates/check_js_type_info/tests/snapshots/infer_type_of_array.snap
---
source: crates/check_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
const array: Array<string> = [];

```

## Result

```
array => instanceof unresolved reference "Array"<string> (scope ID: 0)

```

## Registered types

```
Global TypeId(0) => instanceof unresolved reference "Array"<string> (scope ID: 0)
```
