crates/check_js_type_info/tests/snapshots/infer_type_of_binary_expression_eq.snap
---
source: crates/check_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
const a = 1 === 1;

```

## Result

```
a => value: true

```

## Registered types

```
Global TypeId(0) => value: true
```
