crates/check_js_type_info/tests/snapshots/infer_type_of_dynamic_import.snap
---
source: crates/check_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
const a = import("some-module");

```

## Result

```
a => instanceof Promise

```
